wrapped up content

--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "@gridsome/remark-prismjs": "0.3.0",
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.5.0",
+    "babel-runtime": "^6.26.0",
+    "dotenv": "^8.2.0",
+    "gridsome": "^0.7.0",
+    "marked": "^0.8.2",
+    "moment": "^2.24.0",
+    "prismic-dom": "^2.1.0",
+    "prismic-javascript": "^2.7.0",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
+    "gridsome-plugin-tailwindcss": "^2.2.43",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0"
   }
