--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
     "babel-runtime": "^6.26.0",
+    "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "gridsome": "^0.7.0",
     "marked": "^0.8.2",
