--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@gridsome/remark-prismjs": "0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
@@ -21,6 +23,7 @@
     "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "gridsome-plugin-tailwindcss": "^2.2.43",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0"
