--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "dracula-prism": "^1.2.1",
     "gridsome": "^0.7.0",
     "marked": "^0.8.2",
     "moment": "^2.24.0",
     "prismic-dom": "^2.1.0",
     "prismic-javascript": "^2.7.0",
+    "prismjs": "^1.20.0",
     "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
