--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@gridsome/remark-prismjs": "0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/source-ghost": "^0.4.0",
     "@gridsome/transformer-remark": "^0.5.0",
+    "@tryghost/content-api": "^1.4.1",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
