--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gridsome/transformer-remark": "^0.5.0",
     "@tryghost/content-api": "^1.4.1",
     "babel-runtime": "^6.26.0",
+    "commentappjs": "^1.0.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "dracula-prism": "^1.2.1",
